force-app/main/default/objects/Account/fields/ARF_1_30_Days__c.field-meta.xml
<CustomField>
    <fullName>ARF_1_30_Days__c</fullName>
    <description>Sum of open invoice balances 1-30 days past due</description>
    <label>1-30 Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>