force-app/main/default/objects/Account/fields/ARF_31_60_Days__c.field-meta.xml
<CustomField>
    <fullName>ARF_31_60_Days__c</fullName>
    <description>Sum of open invoice balances 31-60 days past due</description>
    <label>31-60 Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>