force-app/main/default/objects/Account/fields/ARF_Assigned_Collector__c.field-meta.xml
<CustomField>
    <fullName>ARF_Assigned_Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Collector responsible for this account</description>
    <label>Assigned Collector</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Collector_Accounts</relationshipLabel>
    <relationshipName>Collector_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>