force-app/main/default/objects/Account/fields/ARF_Available_Credit__c.field-meta.xml
<CustomField>
    <fullName>ARF_Available_Credit__c</fullName>
    <description>Credit limit minus total AR</description>
    <label>Available Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>