force-app/main/default/objects/Account/fields/ARF_Avg_Days_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>ARF_Avg_Days_To_Pay__c</fullName>
    <description>Historical average days to pay</description>
    <label>Avg Days to Pay</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>