force-app/main/default/objects/Account/fields/ARF_Collection_Strategy__c.field-meta.xml
<CustomField>
    <fullName>ARF_Collection_Strategy__c</fullName>
    <description>Assigned collection strategy</description>
    <label>Collection Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Standard</fullName><default>false</default><label>Standard</label></value>
                <value><fullName>Aggressive</fullName><default>false</default><label>Aggressive</label></value>
                <value><fullName>Gentle</fullName><default>false</default><label>Gentle</label></value>
                <value><fullName>Legal</fullName><default>false</default><label>Legal</label></value>
                <value><fullName>VIP</fullName><default>false</default><label>VIP</label></value>
                <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>