force-app/main/default/objects/Account/fields/ARF_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>ARF_Credit_Limit__c</fullName>
    <description>Customer credit limit</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>