force-app/main/default/objects/Account/fields/ARF_Current__c.field-meta.xml
<CustomField>
    <fullName>ARF_Current__c</fullName>
    <description>Sum of open invoice balances that are not yet past due</description>
    <label>Current (Not Due)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>