force-app/main/default/objects/Account/fields/ARF_DSO__c.field-meta.xml
<CustomField>
    <fullName>ARF_DSO__c</fullName>
    <description>Days sales outstanding for this account</description>
    <label>Account DSO</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>