force-app/main/default/objects/Account/fields/ARF_In_Dispute__c.field-meta.xml
<CustomField>
    <fullName>ARF_In_Dispute__c</fullName>
    <description>Total amount currently in dispute</description>
    <label>In Dispute Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>