force-app/main/default/objects/Account/fields/ARF_Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>ARF_Last_Contact_Date__c</fullName>
    <description>Date of last collection contact</description>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>