force-app/main/default/objects/Account/fields/ARF_Last_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>ARF_Last_Contact_Method__c</fullName>
    <description>Channel of the most recent communication</description>
    <label>Last Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>