force-app/main/default/objects/Account/fields/ARF_Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>ARF_Last_Payment_Date__c</fullName>
    <description>Date of most recent payment</description>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>