force-app/main/default/objects/Account/fields/ARF_Open_Dispute_Count__c.field-meta.xml
<CustomField>
    <fullName>ARF_Open_Dispute_Count__c</fullName>
    <description>Count of open disputes</description>
    <label>Open Disputes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>