force-app/main/default/objects/Account/fields/ARF_Over_90_Days__c.field-meta.xml
<CustomField>
    <fullName>ARF_Over_90_Days__c</fullName>
    <description>Sum of open invoice balances over 90 days past due</description>
    <label>90+ Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>