force-app/main/default/objects/Account/fields/ARF_Overdue_Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>ARF_Overdue_Invoice_Count__c</fullName>
    <description>Count of overdue invoices</description>
    <label>Overdue Invoices</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>