force-app/main/default/objects/Account/fields/ARF_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>ARF_Past_Due__c</fullName>
    <description>Total past due amount</description>
    <label>Past Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>