force-app/main/default/objects/Account/fields/ARF_Promised_Amount__c.field-meta.xml
<CustomField>
    <fullName>ARF_Promised_Amount__c</fullName>
    <description>Total amount with active promise to pay</description>
    <label>Promised Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>