force-app/main/default/objects/Account/fields/ARF_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>ARF_Risk_Score__c</fullName>
    <description>AI-calculated risk score 0-100</description>
    <label>Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>