force-app/main/default/objects/Account/fields/ARF_Sticky_Note__c.field-meta.xml
<CustomField>
    <fullName>ARF_Sticky_Note__c</fullName>
    <description>Highlighted note visible to all users on the Account 360 page</description>
    <label>Sticky Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>