force-app/main/default/objects/Account/fields/ARF_Stop_Status__c.field-meta.xml
<CustomField>
    <fullName>ARF_Stop_Status__c</fullName>
    <description>Account stop status for orders</description>
    <label>Stop Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
                <value><fullName>Warning</fullName><default>false</default><label>Warning</label></value>
                <value><fullName>Stop</fullName><default>false</default><label>Stop</label></value>
                <value><fullName>Legal Hold</fullName><default>false</default><label>Legal Hold</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>