force-app/main/default/objects/Account/fields/ARF_Template_Locale__c.field-meta.xml
<CustomField>
    <fullName>ARF_Template_Locale__c</fullName>
    <description>Preferred locale for email templates sent to this account</description>
    <label>Template Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>English (US)</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>ja</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>zh_CN</fullName>
                <label>Chinese (Simplified)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>