force-app/main/default/objects/Account/fields/ARF_Total_AR__c.field-meta.xml
<CustomField>
    <fullName>ARF_Total_AR__c</fullName>
    <description>Total accounts receivable balance</description>
    <label>Total AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>