force-app/main/default/objects/Account/fields/ARF_Total_Disputed__c.field-meta.xml
<CustomField>
    <fullName>ARF_Total_Disputed__c</fullName>
    <description>Total amount currently in dispute</description>
    <label>Total Disputed</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>